add loading notice

--- a/src/index.html
+++ b/src/index.html
@@ -10,7 +10,7 @@
   </head>
 
   <body>
-    <app-root></app-root>
+    <app-root>Loading(加载中)....</app-root>
   </body>
 
   <!-- Global site tag (gtag.js) - Google Analytics -->
